# Unveil

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.githooks/: README.md  prepare-commit-msg
.github/workflows/: release.yml
docs/: AUDIT.md  AUDIT_CLI_AND_BURP.md  AUDIT_FINAL_BUGS_AND_HICCUPS.md  AUDIT_FULL.md  AUDIT_FULL_2026.md  AUDIT_TESTING_PHASES_AND_RECON_DEPTH.md  CLI_UI_IMPROVEMENTS.md  FEATURES.md  FEATURE_EXPANSION.md  GAPS_AND_IMPROVEMENTS.md  GETTING_STARTED.md  GLOSSARY.md  RELEASING.md  REMAINING_ISSUES.md  SECURITY_AUDIT.md  SENIOR_PENTESTER_AUDIT_2026.md  SENIOR_TESTER_AUDIT.md  THICK_CLIENT_DISCOVERY.md  USAGE.md  VISION.md  VULNERABILITY_MAPPING.md
scripts/: Setup-Unveil-Windows.ps1  install.ps1  install.sh  run_daemon.py
tests/: __init__.py  test_classifier.py  test_engine.py
unv/: classifier.py  cli.py  cli_printer.py  engine.py  exploit_families.py  exporter.py  missing_link_engine.py  static_parser.py  surface_expander.py  surface_synth.py  verdict_compiler.py
unv/assets/: banner.txt
unveil/: RADAR_BASELINE.md  apk_manifest.py  asset_discovery.py  attack_graph.py  cert_audit.py  chain_closure.py  chainability.py  checklist_scan.py  classifier.py  cli.py  cli_printer.py  config.py  credential_hints.py  cve_lookup.py  daemon.py  db_summary.py  dotnet_audit.py  electron_info.py  engine.py  exploit_families.py  exporter.py  findings_export.py  instrumentation_hints.py  missing_link_engine.py  payloads.py  permission_audit.py  renderer.py  report_diff.py  sarif_export.py  static_parser.py  surface_expander.py  surface_synth.py  thick_client_findings.py  verdict_compiler.py
unveil-burp/: README.md  build.gradle.kts  settings.gradle.kts
unveil/assets/: banner.txt
unveil/core/: engine.py
(+3 files in other folders)
