[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unveil"
version = "0.8.1"
requires-python = ">=3.9"
dependencies = ["pygments", "lief","pefile","fastapi","uvicorn","python-multipart"]
authors = [{name="pa7ch3s"}]
readme = "README.md"

[project.optional-dependencies]
test = ["pytest>=7"]


[tool.setuptools.packages.find]
where = ["."]
include = ["unveil*"]

[tool.setuptools.package-data]
unveil = ["assets/*"]

[project.scripts]
unveil = "unveil.cli:main"

[tool.setuptools]
license-files = []
